# fastpackage

./: Cargo.toml
src/: main.rs
