[package]
name = "fastpackage"
version = "0.1.0"
authors = ["Atulya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
home = "0.5.3"
reqwest = "0.11.2"
tokio = { version = "*", features = ["full"] }
colored = "2.0.0"